apps/base/openclaw/resources/deployment.yaml
# yamllint disable rule:line-length
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openclaw
  name: openclaw
  namespace: openclaw
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: openclaw
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: gateway
      labels:
        app: openclaw
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: HOME
              value: /home/node
            - name: NODE_ENV
              value: production
          image: ghcr.io/openclaw/openclaw:2026.5.7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - node
                - -e
                - "require('http').get('http://127.0.0.1:18789/healthz', r => process.exit(r.statusCode < 400 ? 0 : 1)).on('error', () => proces.exit(1))"
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: gateway
          ports:
            - containerPort: 42617
              name: http
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          # resources:
          #   requests:
          #     cpu: 1m
          #     memory: 8Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /home/node/.npm
              name: npm
            - mountPath: /home/node/.openclaw
              name: data
            - mountPath: /tmp
              name: temp
      imagePullSecrets:
        - name: dockerconfig
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          secret:
            secretName: openclaw-config
        - name: data
          persistentVolumeClaim:
            claimName: openclaw-data
        - emptyDir: {}
          name: npm
        - emptyDir: {}
          name: temp
